[package]
name = "wth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
open = "3.0.3"
ron = "0.8"
roxmltree = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
