[package]
name = "wth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
directories = "4.0.1"
open = "3.0.3"
ron = "0.8"
roxmltree = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
urlencoding = "2.1.2"
